Make it build, replace kotlin code by stubs

--- a/res/values-v21/styles.xml
+++ b/res/values-v21/styles.xml
@@ -17,6 +17,6 @@
  */
 -->
 <resources>
-    <style name="AppTheme" parent="@android:style/Theme.Material.Light">
+    <style name="AppTheme" parent="@android:style/Theme.Light">
     </style>
 </resources>
