--- a/res/layout/input.xml
+++ b/res/layout/input.xml
@@ -66,7 +66,7 @@
 
 	</com.dexilog.smartkeyboard.ui.CandidateViewContainer>
 <!--
-	<com.dexilog.smartkeyboard.ui.MainKeyboardView
+	<com.dexilog.smartkeyboard.ui.KeyboardView
 		xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/keyboard"
 		android:layout_width="960px"
 		android:layout_height="wrap_content"
