--- a/res/layout/skin_list.xml
+++ b/res/layout/skin_list.xml
@@ -23,7 +23,7 @@
 	<ListView android:layout_width="fill_parent" android:id="@+id/list"
 		android:layout_height="0dip" android:layout_weight="1.0" />
 
-	<com.dexilog.smartkeyboard.ui.MainKeyboardView
+	<com.dexilog.smartkeyboard.ui.KeyboardView
 		android:id="@+id/keyboard" android:layout_alignParentBottom="true"
 		android:layout_gravity="bottom" android:layout_width="fill_parent"
 		android:layout_height="wrap_content" />
