Change some defaults

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -110,7 +110,7 @@
 			<com.dexilog.smartkeyboard.LangKeyPref
 				android:title="English"
 				android:key="langEN" android:summary="@string/english"
-				android:persistent="true" android:defaultValue="false" />
+				android:persistent="true" android:defaultValue="true" />
 			<com.dexilog.smartkeyboard.LangKeyPref
 				android:title="English (UK)"
 				android:key="langEN_UK" android:summary="@string/english"
@@ -294,7 +294,7 @@
 			<com.dexilog.smartkeyboard.LangKeyPref
 				android:title="Русский (3 ряда)"
 				android:key="langRU_SMALL" android:summary="@string/russian"
-				android:persistent="true" android:defaultValue="false" />
+				android:persistent="true" android:defaultValue="true" />
 			<com.dexilog.smartkeyboard.LangKeyPref
 				android:title="Русский (ЯШЕРТ)"
 				android:key="langRU_YaShERT" android:summary="@string/russian_phonetic"
@@ -423,7 +423,7 @@
 		<ListPreference android:title="@string/arrows_main"
 			android:key="show_arrows_main" android:summary="@string/arrows_main_summary"
 			android:entries="@array/arrows_main" android:entryValues="@array/arrows_main_values"
-			android:persistent="true" android:defaultValue="0" />
+			android:persistent="true" android:defaultValue="3" />
 		<CheckBoxPreference android:key="suggest_hard"
 			android:title="@string/physical_kbd" android:summary="@string/physical_kbd_summary"
 			android:persistent="true" android:defaultValue="false" />
@@ -432,7 +432,7 @@
 			android:persistent="true" android:defaultValue="true" />
 		<CheckBoxPreference android:title="@string/show_preview"
 			android:key="show_preview" android:summary="@string/show_preview_summary"
-			android:persistent="true" android:defaultValue="true" />
+			android:persistent="true" android:defaultValue="false" />
 		<com.dexilog.smartkeyboard.ui.preferences.SeekBarPref
 			android:title="@string/transparency" android:summary="@string/transparency_summary"
 			android:dialogTitle="@string/opacity" android:key="opacity"
@@ -442,7 +442,7 @@
 			android:persistent="true" android:defaultValue="false" />
 		<CheckBoxPreference android:title="@string/enable_arrows"
 			android:key="enable_arrows" android:summary="@string/enable_arrows_summary"
-			android:persistent="true" android:defaultValue="false" />
+			android:persistent="true" android:defaultValue="true" />
 		<ListPreference android:key="arrows_style" android:title="@string/arrows_style"
 		 	android:summary="@string/arrows_style_summary" android:entries="@array/arrows_styles"
 			android:entryValues="@array/arrows_values" android:dialogTitle="@string/arrows_style"
@@ -457,7 +457,7 @@
 			android:key="alt_symbols" android:summary="@string/alt_symbols_summary"
 			android:persistent="true" android:defaultValue="false" />
 		<CheckBoxPreference android:title="@string/more_symbols" android:key="more_symbols"
-			android:summary="@string/more_symbols_summary" android:persistent="true" android:defaultValue="false" />
+			android:summary="@string/more_symbols_summary" android:persistent="true" android:defaultValue="true" />
 		<com.dexilog.smartkeyboard.ui.preferences.SeekBarPref
 			android:title="@string/longpress_duration" android:summary="@string/longpress_duration_summary"
 			android:dialogTitle="@string/longpress_duration" android:key="longpress_duration"
@@ -734,7 +734,7 @@
 			android:persistent="true" android:defaultValue="false" />
 		<CheckBoxPreference android:title="@string/no_alt_preview"
 			android:summary="@string/no_alt_preview_summary" android:key="no_alt_preview"
-			android:persistent="true" android:defaultValue="false" />
+			android:persistent="true" android:defaultValue="true" />
 		<CheckBoxPreference android:title="@string/dynamic_resizing"
 			android:summary="@string/dynamic_resizing_summary" android:key="dynamic_resizing"
 			android:persistent="true" android:defaultValue="true" />
